--- a/package.json
+++ b/package.json
@@ -2,46 +2,123 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:api": "npx nx serve org",
+    "start:client": "npx nx serve client",
+    "start:dev:db": "bash ./scripts/start-db.sh"
+  },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~17.0.0",
+    "@angular/common": "~17.0.0",
+    "@angular/compiler": "~17.0.0",
+    "@angular/core": "~17.0.0",
+    "@angular/forms": "~17.0.0",
+    "@angular/platform-browser": "~17.0.0",
+    "@angular/platform-browser-dynamic": "~17.0.0",
+    "@angular/platform-server": "~17.0.0",
+    "@angular/router": "~17.0.0",
+    "@angular/ssr": "~17.0.0",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/platform-express": "^10.0.2",
-    "axios": "^1.0.0",
+    "@nestjs/platform-socket.io": "^10.3.1",
+    "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.3.1",
+    "@nrwl/next": "^17.3.1",
+    "@nrwl/react": "^17.3.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "express": "~4.18.2",
+    "next": "14.0.4",
+    "ngx-socket-io": "^4.6.1",
+    "pg": "^8.11.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.20",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~17.0.0",
+    "@angular-devkit/core": "~17.0.0",
+    "@angular-devkit/schematics": "~17.0.0",
+    "@angular-eslint/eslint-plugin": "~17.0.0",
+    "@angular-eslint/eslint-plugin-template": "~17.0.0",
+    "@angular-eslint/template-parser": "~17.0.0",
+    "@angular/cli": "^17.1.2",
+    "@angular/compiler-cli": "~17.0.0",
+    "@angular/language-service": "~17.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nrwl/angular": "^17.2.8",
+    "@nx/angular": "^17.3.1",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
+    "@nx/jest": "17.3.1",
+    "@nx/js": "17.3.1",
     "@nx/nest": "17.2.8",
+    "@nx/next": "17.3.1",
     "@nx/node": "17.2.8",
+    "@nx/react": "17.3.1",
+    "@nx/vite": "17.3.1",
+    "@nx/web": "17.3.1",
     "@nx/webpack": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@schematics/angular": "~17.0.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@testing-library/react": "14.0.0",
+    "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.0.4",
+    "autoprefixer": "^10.4.17",
+    "babel-jest": "^29.4.1",
     "eslint": "~8.48.0",
+    "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jest-preset-angular": "~13.1.4",
+    "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.2.8",
+    "postcss": "^8.4.33",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.4"
   }
 }
