--- a/package.json
+++ b/package.json
@@ -9,16 +9,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.0.0",
-    "@angular/common": "~17.0.0",
-    "@angular/compiler": "~17.0.0",
-    "@angular/core": "~17.0.0",
-    "@angular/forms": "~17.0.0",
-    "@angular/platform-browser": "~17.0.0",
-    "@angular/platform-browser-dynamic": "~17.0.0",
-    "@angular/platform-server": "~17.0.0",
-    "@angular/router": "~17.0.0",
-    "@angular/ssr": "~17.0.0",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -29,13 +19,15 @@
     "@nestjs/websockets": "^10.3.1",
     "@nrwl/next": "^17.3.1",
     "@nrwl/react": "^17.3.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "express": "~4.18.2",
     "next": "14.0.4",
-    "ngx-socket-io": "^4.6.1",
+    "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,23 +39,11 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.20",
-    "zone.js": "~0.14.0"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.0.0",
-    "@angular-devkit/core": "~17.0.0",
-    "@angular-devkit/schematics": "~17.0.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
-    "@angular/cli": "^17.1.2",
-    "@angular/compiler-cli": "~17.0.0",
-    "@angular/language-service": "~17.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nrwl/angular": "^17.2.8",
-    "@nx/angular": "^17.3.1",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/jest": "17.3.1",
@@ -71,13 +51,11 @@
     "@nx/nest": "17.2.8",
     "@nx/next": "17.3.1",
     "@nx/node": "17.2.8",
-    "@nx/react": "17.3.1",
     "@nx/vite": "17.3.1",
     "@nx/web": "17.3.1",
     "@nx/webpack": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@schematics/angular": "~17.0.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
@@ -94,7 +72,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "eslint": "~8.48.0",
     "eslint-config-next": "14.0.4",
@@ -106,14 +84,13 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~13.1.4",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.2.8",
-    "postcss": "^8.4.33",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
