--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/platform-express": "^10.0.2",
@@ -19,10 +20,15 @@
     "@nestjs/websockets": "^10.3.1",
     "@nrwl/next": "^17.3.1",
     "@nrwl/react": "^17.3.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "axios": "^1.6.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "express": "~4.18.2",
@@ -39,7 +45,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
