--- a/libs/shared/project.json
+++ b/libs/shared/project.json
@@ -1,7 +1,7 @@
 {
   "name": "shared",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "shared/src",
+  "sourceRoot": "libs/shared/src",
   "projectType": "library",
   "tags": [],
   "targets": {
