--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start:api": "npx nx serve org",
     "start:client": "npx nx serve client",
-    "start:dev:db": "bash ./scripts/start-db.sh"
+    "start:dev:db": "bash ./scripts/start-db.sh",
+    "prisma:migrate": "npx nx run schema:migrate",
+    "prisma": "npx nx run schema:prisma",
+    "prisma:format": "npx nx run schema:prisma format",
+    "prisma:generate": "npx nx run schema:generate-types"
   },
   "private": true,
   "dependencies": {
@@ -16,16 +20,17 @@
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-socket.io": "^10.3.1",
-    "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.3.1",
     "@nrwl/next": "^17.3.1",
     "@nrwl/react": "^17.3.1",
+    "@prisma/client": "^5.9.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -34,10 +39,9 @@
     "express": "~4.18.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
-    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.2",
+    "react-resizable-panels": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.7.4",
@@ -45,7 +49,6 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.20",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
@@ -96,6 +99,7 @@
     "nx": "17.2.8",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "prisma": "^5.9.1",
     "react-refresh": "^0.10.0",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
