--- a/nx.json
+++ b/nx.json
@@ -100,5 +100,13 @@
         "linter": "eslint"
       }
     }
+  },
+  "tasksRunnerOptions": {
+    "default": {
+      "runner": "@vercel/remote-nx",
+      "options": {
+        "cacheableOperations": ["build"]
+      }
+    }
   }
 }
