--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.7",
     "class-transformer": "^0.5.1",
@@ -49,6 +51,7 @@
     "rxjs": "^7.8.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
@@ -83,6 +86,7 @@
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vercel/remote-nx": "^2.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
