--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@org/shared": ["libs/shared/src/index.ts"],
-      "@org/shared/*": ["libs/shared/src/*"]
+      // "@org/shared": ["libs/shared/src/index.ts"],
+      "@org/shared/*": ["libs/shared/src/*"],
+      "@org/schema/*": ["libs/schema/src/*"],
+      "@org/prisma-client": ["libs/prisma-client/src/*"],
     }
   }
 }
