update libs and project structure

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,12 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@org/prisma-client": ["libs/prisma-client/src/index.ts"],
-      "@org/schema": ["libs/schema/src/index.ts"],
-      "@org/shared": ["libs/shared/src/index.ts"],
-      "@org/shared/components": ["libs/shared/src/components/ui"],
-      "@org/shared/types": ["libs/shared/src/types/"],
-      "@org/shared/server": ["libs/shared/src/server.ts"]
+      "@org/shared": ["libs/shared/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
