--- a/libs/shared/tsconfig.json
+++ b/libs/shared/tsconfig.json
@@ -4,7 +4,8 @@
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "types": ["vite/client"]
   },
   "files": [],
   "include": [],
@@ -13,5 +14,5 @@
       "path": "./tsconfig.lib.json"
     }
   ],
-  "extends": "../tsconfig.base.json"
+  "extends": "../../tsconfig.base.json"
 }
