--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-socket.io": "^10.3.1",
+    "@nestjs/serve-static": "^4.0.1",
     "@nestjs/websockets": "^10.3.1",
     "@nrwl/next": "^17.3.1",
     "@nrwl/react": "^17.3.1",
@@ -62,6 +63,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "17.2.8",
@@ -70,7 +73,8 @@
     "@nx/js": "17.3.1",
     "@nx/nest": "17.2.8",
     "@nx/next": "17.3.1",
-    "@nx/node": "17.2.8",
+    "@nx/node": "^17.2.8",
+    "@nx/react": "17.3.1",
     "@nx/vite": "17.3.1",
     "@nx/web": "17.3.1",
     "@nx/webpack": "17.2.8",
@@ -118,6 +122,7 @@
     "typescript": "~5.2.2",
     "url-loader": "^4.1.1",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~2.3.0",
     "vitest": "^1.0.4"
   }
 }
